--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
+    "@fullcalendar/vue3": "^6.1.5",
     "element-plus": "^2.3.2",
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
