--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite-express": "*",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
