--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/vue3": "^6.1.5",
     "element-plus": "^2.3.2",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite-express": "*",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
     "nodemon": "^2.0.20",
